<resources>
    <string name="app_name">Israel Scaventures Jerusalem Hunts</string>
    <string name="intro_title">Intro</string>
    <string name="rules">The rules of the games go here</string>
    <string name="assign_positions">Assign positions go here</string>
    <string name="isLocationSettingsOn">Is the location setting on?</string>
    <string name="startButton">Start</string>
    <string name="sourceButton">Source Sheets</string>
    <string name="questionsButton">Questions Sheet</string>
    <string name="questionSheetButton">Press to answer</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="direction1a">Stand so that you are facing the street sign (Mishmerot Hakehuna Rd). Descend two steps so you are on (Mishmerot Hakehuna Rd).  </string>
    <string name="direction1b">Turn to your left, start walking.  You will pass two olive trees on your right.  </string>
    <string name="direction1c">Turn into the alley on your right.  Walk up the alley (the parking lot will be on your left). Keep on walking up the alley until you reach the entrance to (Jewish Quarter St.)on your right. </string>
    <string name="direction1d">Turn into (Jewish Quarter St.)and walk until the Open Air Cardo is on your left. (You will see lots of pillars). Turn and face the Cardo, you are now at your starting point.</string>
    <string name="direction1e">Your Historian should read from your book of Chronicles about the Cardo.</string>
    <string name="direction1f">picture</string>
    <string-array name="directions2CardoMadeba">
        <item>While you are facing the Cardo, turn to your right and continue to walk down the street that you are on, (Jewish Quarter St.). </item>
        <item>You will pass a set of stairs on your left.  Keep on walking for a few minutes until you reach a second set of stairs that lead into the covered section of the Cardo. </item>
        <item>Go down the stairs into the main underground section of the Cardo.  </item>
        <item>You’ll come back here soon - with your backs to the street, turn to your left and walk through the underground Cardo until you reach the Madeba Map (mosaic) in a small room adjacent to the enclosed Cardo. </item>
        <item>Your Historian should read from your book of Chronicles about the The Madeba Map.</item>
        <item>picture</item>
    </string-array>
    <string-array name="directions3MadebaCardo2">
        <item>Return to the main section of the enclosed Cardo. </item>
    </string-array>
    <string-array name="directions4CardoRamban">
        <item>Go back up the stairs that take you to (Jewish Quarter St.) and turn right.  </item>
        <item>Keep walking on (Jewish Quarter St.) until the Outdoor Cardo is on your right. </item>
        <item>Just before you reach the restaurant area, turn left into the opening that will take you into the main square of the Jewish Quarter.  </item>
        <item>On your immediate left is an olive tree.  Next to the olive tree are stairs going down into the courtyard of the Ramban Synagogue. </item>
        <item>Go down the stairs and sit down in the plaza. </item>
        <item>Read your book of Chronicles about the Ramban Synagogue.</item>

    </string-array>
    <string-array name="directions5RambanMosque">
        <item>As you climb up the stairs, turn around and look up.  See the only mosque in the Jewish Quarter. </item>
    </string-array>
    <string-array name="directions6MosqueBetEl">
        <item>Stand with your back to the entrance to the Ramban Synagogue, so you are facing the stairs that are adjacent to the structure with five arches.  </item>
        <item>Go up these stairs and walk until you see the Kabbalist Yeshiva (Beit El) – ישיבת המקובלים בית אל. </item>
        <item>Stand at the entrance to the building at the magnificent silver etched door.  </item>
        <item>Read about the Yeshiva and Rabbi Meir Yehuda Getz in your Book of Chronicles.</item>
        <item>picture</item>
    </string-array>
    <string-array name="directions7BetElChurva">
        <item>Turn around and face the Ramban Synagogue again.  </item>
        <item>Above it, you will see the magnificent building of the Churva Synagogue. </item>
        <item>Read your book of Chronicles about the Churva Synagogue.</item>
    </string-array>
    <string-array name="directions8ChurvaEsther">
        <item>Go back into the Jewish Quarter square, and walk through the center of the square, with the Churva Synagogue on your left and the benches on your right.  </item>
        <item>After you have passed the Churva Synagogue on your left, there will be an alley on your left.  Enter the alley, it will take you out of the Jewish Quarter Square.  </item>
        <item>When you have gone all the way through the alley, you will see the enclosed section of the Cardo directly in front of you. At the end of the alley on your left, you will see a street sign on the wall telling you that you are on (Lohame HaRova BeTashah St). </item>
        <item>On this street (just under the sign) is a small memorial to the people who gave their lives in the battle for the Jewish Quarter in the War of Independence. </item>
        <item>If the memorial is open you can go in, if it is closed then sit on the stairs.</item>
        <item>picture</item>
    </string-array>
    <string-array name="directions9EstherBroadWall">
        <item>Turn around so the memorial is behind you, return to (Jewish Quarter St).  </item>
        <item>Turn to your right, and keep walking.  You will pass an archaeological site on your right.  </item>
        <item>Take a right on to (Plugat HaKotel St.).  </item>
        <item>You will walk past the public toilets on your right. (You may wish to stop and use them)</item>
        <item>Keep on walking until you see a metallic fence ahead of you.  Go up to the fence. </item>
        <item>Read in your Book of Chronicles about the Broad Wall.</item>
        <item>picture</item>
    </string-array>
    <string-array name="directions10BroadWallTiferet">
        <item>While you are facing the Broad Wall, turn left, and follow the fence to the other side of the Broad Wall.  </item>
        <item>When you reach the play area, follow the road that you are on (do not go down the alley that turns left).  </item>
        <item>Keep walking until you reach a sign that tells you that you have been on (Bone Ha-homa St). </item>
        <item>Leave Bone Ha-homa St. and re-enter the Jewish Quarter Square.   </item>
        <item>Walk up the left side of the square so that you pass the shops on your left. </item>
        <item>At the red pillar sign posting the Herodian Quarter, take a left into (Quaraites St.). </item>
        <item>On the bend of (Quaraites St.)you will see the dramatic ruins of the Tiferet Yisrael Synagogue. Much of it has been boarded up while excavations are underway.</item>
    </string-array>
    <string-array name="directions11TiferetIstambuli">
        <item>Go back to the square the way that you came.   </item>
        <item>When you reach the square turn left.</item>
        <item>Keep on walking, all the way out of the square on to רח המקובלים (HaMekubalim St).</item>
        <item>Do not take a left on to Chaye Olam – rather keep on walking straight. </item>
        <item>Ahead of you, you will see an ornate and decorative door to house number 18. </item>
        <item>Read your book of Chronicles about the Istanbuli Synagogue.</item>
        <item>picture</item>
    </string-array>
    <string-array name="directions12IstambuliGalEd">
        <item>Continue to walk down the winding alley – Gal Ed St.  </item>
        <item>At the end of this alley, take a left.  </item>
        <item>Go up two stairs and sit on the low wall. </item>
        <item>You are now in the site of the Gal Ed.  </item>
        <item>During the war of Independence, the Jewish Quarter was under siege.  It was here that the Old City\'s Jewish inhabitants, trapped within the walls by the Arab siege, buried their fallen residents and soldiers.</item>
        <item>They remained buried here throughout the 19 years of Jordanian occupation of the Old City. After the 6 Day War the bodies were exhumed and brought to rest in the cemetery on the Mount of Olives.</item>
        <item>picture</item>
    </string-array>
    <string-array name="directions13GalEdMachseh">
        <item>Facing you, on the top right hand side of the square, is the exit of this square through a half arch. </item>
        <item>Go through the arch, and enter the   בתי מחסה  Batei Machseh Square. </item>
        <item>Read the Book of Chronicles about Batei Machseh Square.</item>
        <item>picture</item>
    </string-array>
    <string-array name="QuestionsMosque">
        <item>Because of a dispute a certain Jew converted to Islam.  His mother was furious with the Jewish community and in an act of revenge, she dedicated her house to become a mosque.</item>
        <item>Take a photo of the only mosque in the Jewish Quarter. Write a short rap explaining the lesson of the story of the mosque. It needs to include the words  “Yo yo yo yo my bro”</item>

    </string-array>
    <string-array name="InformationTheCardo">
        <item>The Cardo</item>
        <item>“Cardo” is the name for a main street in a Roman City. The Roman Empire conquered Judeah in 63 BCE. In those times, most conquered nations accepted Roman rule, and most conquered nations accepted Roman gods and culture – but the Jews did not. </item>
        <item>As a result of Roman high taxes, persecution and ideological differences, the Jews revolted against the Romans. To rise up against this mighty empire was crazy, but when the Jewish revolt first started, they had some astonishing successes. However, the Roman army besieged Jerusalem and partly due to Jewish infighting, the Jewish fighters could not withstand the Romans attacks, which battered the city with catapults sending stone, iron and fire onto the population. In the year 70 CE, the Roman General Titus, breached the walls of Jerusalem and three weeks later reached the site of the Second Temple and ordered its destruction. Soon, the magnificent Temple was nothing but rubble and ash.</item>
        <item>To eliminate all trace of Jewish Jerusalem, the Romans built a new city on top of the ruins, which they called Aelia Capitolina, named after a Greek god.  Through the center of the city, they built the Cardo.  This was a long street, which crossed the city from north to south with tall columns on either side.   The Cardo that you see today is the remains of this street. </item>
        <item>The total width of the street was 70 feet (22 m), the equivalent of a 4-lane highway.   The reconstructed pillars on the west side of the Cardo supported a wooden roof, which provided shade and shelter from rain for the people in their market stalls. The original pillars on the east side lie under the reconstructed buildings of the Jewish quarter; the palm trees on the main street above the Cardo indicate where the pillars would have stood. The pillars were around 5 meters high. Archeologists have uncovered about 180 meters of the Cardo. </item>
        <item>Quick fact!!!
        *The modern street above the Cardo, is about 6 meters higher than the Cardo.  This shows us how much the level of civilization has risen in the last 1400 years.
        </item>
    </string-array>
</resources>